# bazel_consumer

./: BUILD.bazel  WORKSPACE
bazel/: gazelle-update-repos.sh  go_repositories.bzl
go/: BUILD.bazel  go.mod  go.sum  main.go
