load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/reltuk/bazel_consumer/go",
    visibility = ["//visibility:private"],
    deps = ["@com_github_reltuk_bazel_consumed_go//pkg/message:go_default_library"],
)

go_binary(
    name = "go",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
